Rename random table 1

--- a/account/signup_login.html
+++ b/account/signup_login.html
@@ -2140,7 +2140,7 @@
                                         <div class="flex-items-center">
                                           <div class="ml-4"><input aria-labelledby="whatsapp-row-title"
                                               aria-describedby="whatsapp-row-subtitle" id="whatsapp-row-radio-button"
-                                              class="_83s1a2" type="radio" value="WHATSAPP"></div>
+                                              class="radio__button" type="radio" value="WHATSAPP"></div>
                                         </div>
                                       </div>
                                     </label></div>
@@ -2175,7 +2175,7 @@
                                         <div class="flex-items-center">
                                           <div class="ml-4"><input aria-labelledby="phone_call-row-title"
                                               aria-describedby="phone_call-row-subtitle"
-                                              id="phone_call-row-radio-button" class="_83s1a2" type="radio"
+                                              id="phone_call-row-radio-button" class="radio__button" type="radio"
                                               value="CALL"></div>
                                         </div>
                                       </div>
@@ -5526,7 +5526,7 @@
                                         <div class="flex-items-center">
                                           <div class="ml-4"><input aria-labelledby="whatsapp-row-title"
                                               aria-describedby="whatsapp-row-subtitle" id="whatsapp-row-radio-button"
-                                              class="_83s1a2" type="radio" value="WHATSAPP"></div>
+                                              class="radio__button" type="radio" value="WHATSAPP"></div>
                                         </div>
                                       </div>
                                     </label></div>
@@ -5561,7 +5561,7 @@
                                         <div class="flex-items-center">
                                           <div class="ml-4"><input aria-labelledby="phone_call-row-title"
                                               aria-describedby="phone_call-row-subtitle"
-                                              id="phone_call-row-radio-button" class="_83s1a2" type="radio"
+                                              id="phone_call-row-radio-button" class="radio__button" type="radio"
                                               value="CALL"></div>
                                         </div>
                                       </div>
