--- a/become-a-host/floor-plan.html
+++ b/become-a-host/floor-plan.html
@@ -564,18 +564,18 @@
                           <div class="_fimhxsp" style="animation-delay: 584.847ms;">
                             <div class="_1lpqz29">Are any of these bathrooms private?</div>
                             <div class="_gb49jh" role="radiogroup" style="animation-delay: 584.847ms;">
-                             <div id="radio-input--0" aria-disabled="false" class="rcem0st uyl8mnh dir dir-ltr">
-                              <label for="radio-input--0-row-radio-button" class="_13xlah4">
+                             <div id="radio-input--0" aria-disabled="false" class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr">
+                              <label for="radio-input--0-row-radio-button" class="cursor-pointer">
                                <div class="flex">
-                                <div class="_7ytxmo"><input aria-labelledby="radio-input--0-row-title" aria-describedby="radio-input--0-row-subtitle" id="radio-input--0-row-radio-button" class="_83s1a2" type="radio" value="private" /></div>
+                                <div class="_7ytxmo"><input aria-labelledby="radio-input--0-row-title" aria-describedby="radio-input--0-row-subtitle" id="radio-input--0-row-radio-button" class="radio__button" type="radio" value="private" /></div>
                                 <div class="_gfomxi"><div id="radio-input--0-row-title" class="_gw4xx4">Yes</div></div>
                                </div>
                               </label>
                              </div>
-                             <div id="radio-input--1" aria-disabled="false" class="rcem0st uyl8mnh dir dir-ltr">
-                              <label for="radio-input--1-row-radio-button" class="_13xlah4">
+                             <div id="radio-input--1" aria-disabled="false" class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr">
+                              <label for="radio-input--1-row-radio-button" class="cursor-pointer">
                                <div class="flex">
-                                <div class="_7ytxmo"><input aria-labelledby="radio-input--1-row-title" aria-describedby="radio-input--1-row-subtitle" id="radio-input--1-row-radio-button" class="_83s1a2" type="radio" value="shared" /></div>
+                                <div class="_7ytxmo"><input aria-labelledby="radio-input--1-row-title" aria-describedby="radio-input--1-row-subtitle" id="radio-input--1-row-radio-button" class="radio__button" type="radio" value="shared" /></div>
                                 <div class="_gfomxi"><div id="radio-input--1-row-title" class="_gw4xx4">No, they're all shared</div></div>
                                </div>
                               </label>
@@ -844,7 +844,7 @@
     <div dir="ltr">
       <div class="_1t0jy5tw hidden "></div>
       <section>
-       <div class="_vxvq8x hidden" data-testid="modal-container">
+       <div class="modal__container hidden" data-testid="modal-container">
         <div class="contents ">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
          <div class="contents">
@@ -866,7 +866,7 @@
              </span>
             </button>
            </div>
-           <header class="_1youxq0">
+           <header class="modal__header-container">
             <div class="_1tng6ym"></div>
             <div class="_9t7ktw">
              <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
@@ -1219,7 +1219,7 @@
             </div>
             <div class="_rrmdgl"></div>
            </header>
-           <div class="_12kfhdn"><div class="_3joskp">Your progress up until now has been saved.</div></div>
+           <div class="modal__body"><div class="_3joskp">Your progress up until now has been saved.</div></div>
            <footer class="_zgc1p6">
             <div class="_1gty68l">
              <button type="button" class="btn-link-condensed">Exit</button>
