--- a/become-a-host/location.html
+++ b/become-a-host/location.html
@@ -370,7 +370,7 @@
                                          <label class="_1yw7hpv" for="apt">
                                           <div class="_1jn0ze9"><div class="_11hx67x">Apt, suite, etc. (Optional)</div></div>
                                           <div dir="ltr">
-                                           <div class="_js9i23"><input aria-invalid="false" class="_c5rhl5" id="apt" autocomplete="off" type="text" aria-describedby="" value="" /></div>
+                                           <div class="_js9i23"><input aria-invalid="false" class="form__input" id="apt" autocomplete="off" type="text" aria-describedby="" value="" /></div>
                                           </div>
                                          </label>
                                         </div>
@@ -448,7 +448,7 @@
                                          <label class="_1yw7hpv" for="zipcode">
                                           <div class="_1jn0ze9"><div class="_11hx67x">Zip code (Optional)</div></div>
                                           <div dir="ltr">
-                                           <div class="_js9i23"><input aria-invalid="false" required="" class="_c5rhl5" id="zipcode" autocomplete="off" type="text" aria-describedby="" value="" /></div>
+                                           <div class="_js9i23"><input aria-invalid="false" required="" class="form__input" id="zipcode" autocomplete="off" type="text" aria-describedby="" value="" /></div>
                                           </div>
                                          </label>
                                         </div>
@@ -763,7 +763,7 @@
                                         </div>
                                        </div>
                                        <div>
-                                        <button aria-checked="false" aria-labelledby="pin-type-toggle-label" aria-describedby="pin-type-toggle-description" role="switch" type="button" class="_1hzx1vsg"><div class="_vr1ztso"></div></button>
+                                        <button aria-checked="false" aria-labelledby="pin-type-toggle-label" aria-describedby="pin-type-toggle-description" role="switch" type="button" class="form__switch"><div class="_vr1ztso"></div></button>
                                        </div>
                                       </div>
                                       <div class="_9ngcy9">
@@ -1579,7 +1579,7 @@
     <div dir="ltr">
       <div class="_1t0jy5tw hidden "></div>
       <section>
-       <div class="_vxvq8x hidden" data-testid="modal-container">
+       <div class="modal__container hidden" data-testid="modal-container">
         <div class="contents ">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
          <div class="contents">
@@ -1601,7 +1601,7 @@
              </span>
             </button>
            </div>
-           <header class="_1youxq0">
+           <header class="modal__header-container">
             <div class="_1tng6ym"></div>
             <div class="_9t7ktw">
              <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
@@ -1954,7 +1954,7 @@
             </div>
             <div class="_rrmdgl"></div>
            </header>
-           <div class="_12kfhdn"><div class="_3joskp">Your progress up until now has been saved.</div></div>
+           <div class="modal__body"><div class="_3joskp">Your progress up until now has been saved.</div></div>
            <footer class="_zgc1p6">
             <div class="_1gty68l">
              <button type="button" class="btn-link-condensed">Exit</button>
