--- a/become-a-host/welcome.html
+++ b/become-a-host/welcome.html
@@ -763,7 +763,7 @@
     <div dir="ltr">
       <div class="_1t0jy5tw hidden "></div>
       <section>
-       <div class="_vxvq8x hidden" data-testid="modal-container">
+       <div class="modal__container hidden" data-testid="modal-container">
         <div class="contents ">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
          <div class="contents">
@@ -785,7 +785,7 @@
              </span>
             </button>
            </div>
-           <header class="_1youxq0">
+           <header class="modal__header-container">
             <div class="_1tng6ym"></div>
             <div class="_9t7ktw">
              <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
@@ -1138,7 +1138,7 @@
             </div>
             <div class="_rrmdgl"></div>
            </header>
-           <div class="_12kfhdn"><div class="_3joskp">Your progress up until now has been saved.</div></div>
+           <div class="modal__body"><div class="_3joskp">Your progress up until now has been saved.</div></div>
            <footer class="_zgc1p6">
             <div class="_1gty68l">
              <button type="button" class="btn-link-condensed">Exit</button>
