--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -630,11 +630,11 @@
                                                 aria-disabled="false"
                                                 role="group"
                                                 aria-labelledby="underTwo-row-title"
-                                                class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                                class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                                               >
                                                 <label
                                                   for="underTwo-row-checkbox"
-                                                  class="_13xlah4"
+                                                  class="cursor-pointer"
                                                 >
                                                   <div class="flex">
                                                     <div class="explore-filter-menu__list-label">
@@ -716,11 +716,11 @@
                                                 aria-disabled="false"
                                                 role="group"
                                                 aria-labelledby="Tag:4804-row-title"
-                                                class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                                class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                                               >
                                                 <label
                                                   for="Tag:4804-row-checkbox"
-                                                  class="_13xlah4"
+                                                  class="cursor-pointer"
                                                 >
                                                   <div class="flex">
                                                     <div class="explore-filter-menu__list-label">
@@ -767,11 +767,11 @@
                                                 aria-disabled="false"
                                                 role="group"
                                                 aria-labelledby="Tag:4802-row-title"
-                                                class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                                class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                                               >
                                                 <label
                                                   for="Tag:4802-row-checkbox"
-                                                  class="_13xlah4"
+                                                  class="cursor-pointer"
                                                 >
                                                   <div class="flex">
                                                     <div class="explore-filter-menu__list-label">
@@ -821,11 +821,11 @@
                                                 aria-disabled="false"
                                                 role="group"
                                                 aria-labelledby="Tag:4805-row-title"
-                                                class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                                class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                                               >
                                                 <label
                                                   for="Tag:4805-row-checkbox"
-                                                  class="_13xlah4"
+                                                  class="cursor-pointer"
                                                 >
                                                   <div class="flex">
                                                     <div class="explore-filter-menu__list-label">
@@ -1159,11 +1159,11 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                                 aria-disabled="false"
                                                 role="group"
                                                 aria-labelledby="requireIdVerification-row-title"
-                                                class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
+                                                class="explore-filter-menu__list-padding become-a-host__price-discount-card dir dir-ltr"
                                               >
                                                 <label
                                                   for="requireIdVerification-row-checkbox"
-                                                  class="_13xlah4"
+                                                  class="cursor-pointer"
                                                 >
                                                   <div class="flex">
                                                     <div class="explore-filter-menu__list-label">
