--- a/edit/photos.html
+++ b/edit/photos.html
@@ -3375,7 +3375,7 @@
   <div dir="ltr">
     <div class="_1t0jy5tw hidden"></div>
     <section>
-     <div class="_vxvq8x hidden" data-testid="modal-container">
+     <div class="modal__container hidden" data-testid="modal-container">
       <div class="contents">
        <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
        <div class="contents">
@@ -3397,14 +3397,14 @@
            </span>
           </button>
          </div>
-         <header class="_1youxq0">
+         <header class="modal__header-container">
           <div class="_1tng6ym"></div>
           <div class="_9t7ktw">
            <h1 tabindex="-1" class="heading" elementtiming="LCP-target"><div class="_1q9sh65">Edit photo</div></h1>
           </div>
           <div class="_rrmdgl"></div>
          </header>
-         <div class="_12kfhdn">
+         <div class="modal__body">
           <div class="_1w4ek5c">
            <div class="_meb44z">
             <div class="_8hh3ld">
@@ -3519,7 +3519,7 @@
    <div dir="ltr">
     <div class="_1t0jy5tw hidden add-photo-backdrop"></div>
     <section>
-     <div class="_vxvq8x hidden modal-container-add-photo" data-testid="modal-container" style="align-items: center !important;">
+     <div class="modal__container hidden modal-container-add-photo" data-testid="modal-container" style="align-items: center !important;">
       <div class="contents">
        <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
        <div class="contents">
@@ -3548,7 +3548,7 @@
           <div class="_10toigd">
            <div style="--gp-section-max-width: 1120px;">
             <div data-plugin-in-point-id="GALLERY_LIBRARY_MODAL" data-section-id="GALLERY_LIBRARY_MODAL" style="padding-top: 64px;">
-             <div class="_12kfhdn">
+             <div class="modal__body">
               <div class="_1ijzsyb">
                <section>
                 <h2 tabindex="-1" class="heading" elementtiming="LCP-target"><span class="_18dtjc8n">Add additional photos to your gallery</span></h2>
@@ -3564,8 +3564,8 @@
                  <div class="relative">
                   <div class="_1xkr92p" data-testid="tab-list-wrapper">
                    <div class="_qc3ank" role="tablist">
-                    <button type="button" id="tab--GALLERY_LIBRARY_MODAL-tabs--0" aria-controls="panel--GALLERY_LIBRARY_MODAL-tabs--0" aria-selected="true" class="_fd0fliz" role="tab">Your photos</button>
-                    <button type="button" id="tab--GALLERY_LIBRARY_MODAL-tabs--1" aria-controls="panel--GALLERY_LIBRARY_MODAL-tabs--1" aria-selected="false" class="_tns11i" role="tab" tabindex="-1">Published</button>
+                    <button type="button" id="tab--GALLERY_LIBRARY_MODAL-tabs--0" aria-controls="panel--GALLERY_LIBRARY_MODAL-tabs--0" aria-selected="true" class="tab__btn-active" role="tab">Your photos</button>
+                    <button type="button" id="tab--GALLERY_LIBRARY_MODAL-tabs--1" aria-controls="panel--GALLERY_LIBRARY_MODAL-tabs--1" aria-selected="false" class="tab__btn" role="tab" tabindex="-1">Published</button>
                    </div>
                   </div>
                   <div class="_1wadwfl"></div>
@@ -3573,7 +3573,7 @@
                  <div>
                   <div role="tabpanel" id="panel--GALLERY_LIBRARY_MODAL-tabs--0" aria-labelledby="tab--GALLERY_LIBRARY_MODAL-tabs--0">
                    <div class="_11ee8v7">
-                    <div class="_1u9fru1"><input type="file" accept="image/jpeg, image/png, image/heic" /></div>
+                    <div class="hidden"><input type="file" accept="image/jpeg, image/png, image/heic" /></div>
                     <div>
                      <div>
                       <div class="_1ny5tm2">
@@ -4272,7 +4272,7 @@
    <div dir="ltr">
     <div class="_1t0jy5tw hidden manage-backdrop"></div>
     <section>
-     <div class="_vxvq8x hidden modal-container-manage" data-testid="modal-container" style="align-items: center !important;">
+     <div class="modal__container hidden modal-container-manage" data-testid="modal-container" style="align-items: center !important;">
       <div class="contents">
        <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
        <div class="contents">
@@ -4301,7 +4301,7 @@
           <div class="_10toigd">
            <div style="--gp-section-max-width: 1120px;">
             <div data-plugin-in-point-id="GALLERY_LIBRARY_MODAL" data-section-id="GALLERY_LIBRARY_MODAL" style="padding-top: 64px;">
-             <div class="_12kfhdn">
+             <div class="modal__body">
               <div class="_1ijzsyb">
                <section>
                 <h2 tabindex="-1" class="heading" elementtiming="LCP-target"><span class="_18dtjc8n">Your photo library</span></h2>
@@ -4316,8 +4316,8 @@
                  <div class="relative">
                   <div class="_1xkr92p" data-testid="tab-list-wrapper">
                    <div class="_qc3ank" role="tablist">
-                    <button type="button" id="tab--GALLERY_LIBRARY_MODAL-tabs--0" aria-controls="panel--GALLERY_LIBRARY_MODAL-tabs--0" aria-selected="true" class="_fd0fliz" role="tab">Your photos</button>
-                    <button type="button" id="tab--GALLERY_LIBRARY_MODAL-tabs--1" aria-controls="panel--GALLERY_LIBRARY_MODAL-tabs--1" aria-selected="false" class="_tns11i" role="tab" tabindex="-1">Published</button>
+                    <button type="button" id="tab--GALLERY_LIBRARY_MODAL-tabs--0" aria-controls="panel--GALLERY_LIBRARY_MODAL-tabs--0" aria-selected="true" class="tab__btn-active" role="tab">Your photos</button>
+                    <button type="button" id="tab--GALLERY_LIBRARY_MODAL-tabs--1" aria-controls="panel--GALLERY_LIBRARY_MODAL-tabs--1" aria-selected="false" class="tab__btn" role="tab" tabindex="-1">Published</button>
                    </div>
                   </div>
                   <div class="_1wadwfl"></div>
@@ -4325,7 +4325,7 @@
                  <div>
                   <div role="tabpanel" id="panel--GALLERY_LIBRARY_MODAL-tabs--0" aria-labelledby="tab--GALLERY_LIBRARY_MODAL-tabs--0">
                    <div class="_11ee8v7">
-                    <div class="_1u9fru1"><input type="file" accept="image/jpeg, image/png, image/heic" /></div>
+                    <div class="hidden"><input type="file" accept="image/jpeg, image/png, image/heic" /></div>
                     <div>
                      <div>
                       <div class="_1ny5tm2">
