--- a/help/help.html
+++ b/help/help.html
@@ -544,7 +544,7 @@
                                   <div class="td3c3al dir dir-ltr">
                                     <div class="lhaa7s2 dir dir-ltr" data-testid="login-prompt">
                                       <div class="hidden-xl"><a data-no-client-routing="true" href="/login?redirect_url=/help" class="_6hkhatt"><span
-                                            class="_jxxpcd"><span class="_kaq6tx"
+                                            class="become-a-host__lets-go-wrapper"><span class="_kaq6tx"
                                               style="background-position: calc((100 - var(--mouse-x, 0)) * 1%) calc((100 - var(--mouse-y, 0)) * 1%);"></span></span><span
                                             class="_tcp689">Log in or sign up </span></a></div>
                                       <div class="hidden block-xl">
@@ -554,7 +554,7 @@
                                             <div class="l454cyn dir dir-ltr">Log in to get help with your reservations, account, and more.</div>
                                           </div>
                                           <div class="lhievvu dir dir-ltr"><a data-no-client-routing="true" href="/login?redirect_url=/help"
-                                              class="_6hkhatt"><span class="_jxxpcd"><span class="_kaq6tx"
+                                              class="_6hkhatt"><span class="become-a-host__lets-go-wrapper"><span class="_kaq6tx"
                                                   style="background-position: calc((100 - var(--mouse-x, 0)) * 1%) calc((100 - var(--mouse-y, 0)) * 1%);"></span></span><span
                                                 class="_tcp689">Log in or sign up </span></a></div>
                                         </div>
