--- a/help/searching-for-stays.html
+++ b/help/searching-for-stays.html
@@ -57,7 +57,7 @@
                             aria-autocomplete="both" aria-haspopup="listbox" aria-expanded="false" role="combobox"
                             aria-describedby="search-suggestions-instructions" data-testid="search-input" /><button
                             type="submit" class="sjnrf6s s6on1c3 dir dir-ltr" data-testid="search-submit-button">
-                            <span class="_jxxpcd"><span class="_kaq6tx" style="
+                            <span class="become-a-host__lets-go-wrapper"><span class="_kaq6tx" style="
                                     background-position: calc(
                                         (100 - var(--mouse-x, 0)) * 1%
                                       )
@@ -182,7 +182,7 @@
                 <div class="hidden-xl hidden-xl">
                   <div class="l148h9rn dir dir-ltr">
                     <a data-no-client-routing="true" href="/login?redirect_url=/help/article/252/searching-for-stays"
-                      class="_6hkhatt"><span class="_jxxpcd"><span class="_kaq6tx" style="
+                      class="_6hkhatt"><span class="become-a-host__lets-go-wrapper"><span class="_kaq6tx" style="
                               background-position: calc(
                                   (100 - var(--mouse-x, 0)) * 1%
                                 )
@@ -928,7 +928,7 @@
                           </div>
                           <a data-no-client-routing="true"
                             href="/login?redirect_url=/help/article/252/searching-for-stays" class="_1pcbldss"><span
-                              class="_jxxpcd"><span class="_kaq6tx" style="
+                              class="become-a-host__lets-go-wrapper"><span class="_kaq6tx" style="
                                     background-position: calc(
                                         (100 - var(--mouse-x, 0)) * 1%
                                       )
@@ -1299,7 +1299,7 @@
   <!-- back to top -->
   <div dir="ltr" class="hidden" id='back-to-top'>
     <div class="l7g6a6g afpx55k dir dir-ltr" data-testid="back-to-top-link-button-container">
-      <a href="#" class="btn-dark"><span class="_14d5b3i"><span class="_1r769ej"><svg viewBox="0 0 32 32"
+      <a href="#" class="btn-dark"><span class="_14d5b3i"><span class="search__submit-btn-mx"><svg viewBox="0 0 32 32"
               xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="
                   display: block;
                   fill: none;
