--- a/landing-pages/accessibility.html
+++ b/landing-pages/accessibility.html
@@ -1263,7 +1263,7 @@
            </span>
           </button>
          </div>
-         <header class="_1youxq0">
+         <header class="modal__header-container">
           <div class="_1tng6ym"></div>
           <div class="_9t7ktw"></div>
           <div class="_rrmdgl"></div>
