--- a/landing-pages/covidsafety.html
+++ b/landing-pages/covidsafety.html
@@ -2560,7 +2560,7 @@
             <div class="_9t7ktw"></div>
             <div class="_rrmdgl"></div>
            </header>
-           <div class="_12kfhdn">
+           <div class="modal__body">
             <div class="_5i3nbc">Who is required to follow the new safety and cleaning guidelines?</div>
             <div class="_i1l493">
              <div class="_i87u4ea">
@@ -2616,7 +2616,7 @@
             <div class="_9t7ktw"></div>
             <div class="_rrmdgl"></div>
            </header>
-           <div class="_12kfhdn">
+           <div class="modal__body">
             <div class="_5i3nbc">How do I change or cancel an existing reservation?</div>
             <div class="_i1l493">
              <div class="_i87u4ea">
@@ -2672,7 +2672,7 @@
             <div class="_9t7ktw"></div>
             <div class="_rrmdgl"></div>
            </header>
-           <div class="_12kfhdn">
+           <div class="modal__body">
             <div class="_5i3nbc">What COVID-19 policies have been created for Airbnb Experiences?</div>
             <div class="_i1l493">
              <div class="_i87u4ea">
@@ -2729,7 +2729,7 @@
             <div class="_9t7ktw"></div>
             <div class="_rrmdgl"></div>
            </header>
-           <div class="_12kfhdn">
+           <div class="modal__body">
             <div class="_5i3nbc">What kind of flexible booking options are available on Airbnb?</div>
             <div class="_i1l493">
              <div class="_i87u4ea">
