--- a/landing-pages/social-impact-host.html
+++ b/landing-pages/social-impact-host.html
@@ -1912,7 +1912,7 @@ Harlem, New York City"
                                           </div>
                                         </div>
                                       </div>
-                                      <div id="faq-answer-0" class="_1u9fru1">
+                                      <div id="faq-answer-0" class="hidden">
                                         <div>
                                           <div class="js-modal-close">
                                             <button
@@ -1995,7 +1995,7 @@ Harlem, New York City"
                                           </div>
                                         </div>
                                       </div>
-                                      <div id="faq-answer-1" class="_1u9fru1">
+                                      <div id="faq-answer-1" class="hidden">
                                         <div>
                                           <div class="js-modal-close">
                                             <button
@@ -2101,7 +2101,7 @@ Harlem, New York City"
                                           </div>
                                         </div>
                                       </div>
-                                      <div id="faq-answer-2" class="_1u9fru1">
+                                      <div id="faq-answer-2" class="hidden">
                                         <div>
                                           <div class="js-modal-close">
                                             <button
@@ -2182,7 +2182,7 @@ Harlem, New York City"
                                           </div>
                                         </div>
                                       </div>
-                                      <div id="faq-answer-3" class="_1u9fru1">
+                                      <div id="faq-answer-3" class="hidden">
                                         <div>
                                           <div class="js-modal-close">
                                             <button
@@ -2287,7 +2287,7 @@ Harlem, New York City"
                                           </div>
                                         </div>
                                       </div>
-                                      <div id="faq-answer-4" class="_1u9fru1">
+                                      <div id="faq-answer-4" class="hidden">
                                         <div>
                                           <div class="js-modal-close">
                                             <button
@@ -2372,7 +2372,7 @@ Harlem, New York City"
                                           </div>
                                         </div>
                                       </div>
-                                      <div id="faq-answer-5" class="_1u9fru1">
+                                      <div id="faq-answer-5" class="hidden">
                                         <div>
                                           <div class="js-modal-close">
                                             <button
@@ -2465,7 +2465,7 @@ Harlem, New York City"
                                           </div>
                                         </div>
                                       </div>
-                                      <div id="faq-answer-6" class="_1u9fru1">
+                                      <div id="faq-answer-6" class="hidden">
                                         <div>
                                           <div class="js-modal-close">
                                             <button
@@ -2559,7 +2559,7 @@ Harlem, New York City"
                                           </div>
                                         </div>
                                       </div>
-                                      <div id="faq-answer-7" class="_1u9fru1">
+                                      <div id="faq-answer-7" class="hidden">
                                         <div>
                                           <div class="js-modal-close">
                                             <button
