--- a/listings-product/contact-host-message.html
+++ b/listings-product/contact-host-message.html
@@ -51,7 +51,7 @@
                                             <div class="_s8pn9w">
                                               <div class="_15xhfd45">
                                                 <div
-                                                  class="_1o4zwko"
+                                                  class="page-shell-mobile__nav-wrapper"
                                                   role="presentation"
                                                 >
                                                   <button
@@ -86,7 +86,7 @@
                                                         </svg>
                                                       </div>
                                                       <div
-                                                        class="_1s0b0yb"
+                                                        class="page-shell-mobile__nav-overlay"
                                                       ></div>
                                                     </div>
                                                   </button>
@@ -391,7 +391,7 @@
                                                         aria-required="true"
                                                         name="contactHostMessage"
                                                         autocomplete="off"
-                                                        class="_3u8xhn"
+                                                        class="contact-host__textarea"
                                                         id="contactHostMessage"
                                                         placeholder=""
                                                         style="height: 116px"
