--- a/listings-product/contact-host.html
+++ b/listings-product/contact-host.html
@@ -1441,7 +1441,7 @@
                                                           aria-required="true"
                                                           name="contactHostMessage"
                                                           autocomplete="off"
-                                                          class="contact-host__textarea _3u8xhn"
+                                                          class="contact-host__textarea contact-host__textarea"
                                                           id="contactHostMessage"
                                                           placeholder=""
                                                           style="height: 116px"
@@ -1468,7 +1468,7 @@
                                                 <div class="contact-host__textarea-wrapper">
                                                   <div dir="ltr"><textarea aria-describedby="textarea-error"
                                                       aria-label="Message the host" aria-required="true"
-                                                      name="contactHostMessage" autocomplete="off" class="_3u8xhn"
+                                                      name="contactHostMessage" autocomplete="off" class="contact-host__textarea"
                                                       id="contactHostMessage" placeholder="" style="height: 116px;"
                                                       spellcheck="false" aria-invalid="true"></textarea></div>
                                                 </div>
