--- a/listings-product/places.html
+++ b/listings-product/places.html
@@ -374,9 +374,9 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="_k4m5s3s hidden-md">
+                            <div class="page-shell-mobile__container-wrapper hidden-md">
                                   <div class="_2b0qwl">
-                                    <div class="_1o4zwko" role="presentation">
+                                    <div class="page-shell-mobile__nav-wrapper" role="presentation">
                                       <a aria-label="Back" data-testid="back-button" href="/" class="_1dxtmbip"
                                         ><div class="_1ran6xy">
                                           <div class="_zzdavs">
@@ -403,7 +403,7 @@
                                               </g>
                                             </svg>
                                           </div>
-                                          <div class="_1s0b0yb"></div></div
+                                          <div class="page-shell-mobile__nav-overlay"></div></div
                                       ></a>
                                     </div>
                                   </div>
@@ -552,13 +552,13 @@
                                           </div>
                                         </li>
                                       </ul>
-                                      <div class="_1aq9nzc">
+                                      <div class="carousel-slider__list-m">
                                         <div class="_18v2eh">
                                           <div class="_14x8wq27">
                                             <div class="_1lyyzem">
                                               <button aria-label="Previous" type="button" class="_1ue05kx">
                                                 <span class="relative"
-                                                  ><span class="_krjbj">_</span
+                                                  ><span class="new-arrow-underscore">_</span
                                                   ><svg
                                                     viewBox="0 0 32 32"
                                                     xmlns="http://www.w3.org/2000/svg"
@@ -586,7 +586,7 @@
                                             <div class="_1lyyzem">
                                               <button aria-label="Next" type="button" class="_1ue05kx">
                                                 <span class="relative"
-                                                  ><span class="_krjbj">_</span
+                                                  ><span class="new-arrow-underscore">_</span
                                                   ><svg
                                                     viewBox="0 0 32 32"
                                                     xmlns="http://www.w3.org/2000/svg"
@@ -614,7 +614,7 @@
                                           </div>
                                         </div>
                                         <div class="_1und47">
-                                          <div aria-label="Photo 1 of 4" role="img" class="_r752or">
+                                          <div aria-label="Photo 1 of 4" role="img" class="pagination-bullets">
                                             <div class="_12i96r6">
                                               <div class="_1b2klj3" style="transform: translateX(0px)">
                                             </div>
@@ -17657,7 +17657,7 @@
                   "
                 /></div
             ></span>
-            <div class="_1u9fru1">
+            <div class="hidden">
               <img
                 src="https://a0.muscache.com/im/pictures/34527a29-4963-4a2a-9a15-c694574accbb.jpg?im_w=1200"
                 alt=""
@@ -17742,9 +17742,9 @@
           </div>
           <div class="_yoviva">
             <div style="margin-bottom: 16px">
-              <div class="_1p3joamp">1 / 4</div>
+              <div class="btn-light__text">1 / 4</div>
             </div>
-            <div class="_1dcp06s"><div class="_czm8crp"></div></div>
+            <div class="_1dcp06s"><div class="hero__title"></div></div>
           </div>
         </div>
       </div>
