--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -162,7 +162,7 @@
                                                           </path>
                                                         </g>
                                                       </svg></div>
-                                                    <div class="_1s0b0yb"></div>
+                                                    <div class="page-shell-mobile__nav-overlay"></div>
                                                   </div>
                                                 </span></a></div>
                                             <div class="_1jdtwz4">
@@ -4249,7 +4249,7 @@
                                                 <div class="_384m8u">
                                                   <div class="_10u42wu"><span aria-busy="true"
                                                       style="display: inline-block; height: 100%; width: 100%;"><span
-                                                        class="atm_12_q7pw6w atm_16_12c5xpv atm_u_1yy80mb atm_y_9cwzv5 atm_1c_2rgkoi atm_k4_7tcf61 atm_1k_1ytfnp0 atm_2d_1r31cwp atm_9s_1ulexfb atm_mk_h2mmj6 atm_e2p1ow_glywfm dir dir-ltr"
+                                                        class="atm_12_q7pw6w atm_16_12c5xpv atm_u_1yy80mb atm_y_9cwzv5 atm_1c_2rgkoi atm_k4_7tcf61 atm_1k_1ytfnp0 atm_2d_1r31cwp atm_9s_1ulexfb relative atm_e2p1ow_glywfm dir dir-ltr"
                                                         style="height: 100%; width: 100%;"></span></span></div>
                                                   <div>
                                                     <img src="../assets/images/villa-cetinale-gmap.png"
@@ -4305,9 +4305,9 @@
                                                             id="Koan-map-poi-search-koan__listbox" class="_11zw87j">
                                                           </ul>
                                                           <span id="Koan-map-poi-search-koan__description"
-                                                            class="_krjbj">Enter a search term and navigate forward to
+                                                            class="new-arrow-underscore">Enter a search term and navigate forward to
                                                             access suggestions.</span><span aria-atomic="true"
-                                                            aria-live="polite" role="status" class="_krjbj"></span>
+                                                            aria-live="polite" role="status" class="new-arrow-underscore"></span>
                                                         </div>
                                                       </div>
                                                     </div>
@@ -7453,7 +7453,7 @@
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 1" class="h-full">
                                                         <div style="padding: 8px;"><button data-modal="#gallery-modal"
-                                                            type="button" class="_1yydbd74">
+                                                            type="button" class="link">
                                                             <div class="wh-full">
                                                               <div class="relative">
                                                                 <div class="lite-image" role="img" aria-busy="false"
@@ -7496,7 +7496,7 @@
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 2" class="h-full">
                                                         <div style="padding: 8px;"><button type="button"
-                                                            class="_1yydbd74">
+                                                            class="link">
                                                             <div class="wh-full">
                                                               <div class="relative">
                                                                 <div class="lite-image" role="img" aria-busy="false"
@@ -7539,7 +7539,7 @@
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 3" class="h-full">
                                                         <div style="padding: 8px;"><button type="button"
-                                                            class="_1yydbd74">
+                                                            class="link">
                                                             <div class="wh-full">
                                                               <div class="relative">
                                                                 <div class="lite-image" role="img" aria-busy="false"
@@ -7582,7 +7582,7 @@
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 4" class="h-full">
                                                         <div style="padding: 8px;"><button type="button"
-                                                            class="_1yydbd74">
+                                                            class="link">
                                                             <div class="wh-full">
                                                               <div class="relative">
                                                                 <div class="lite-image" role="img" aria-busy="false"
@@ -7625,7 +7625,7 @@
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 5" class="h-full">
                                                         <div style="padding: 8px;"><button type="button"
-                                                            class="_1yydbd74">
+                                                            class="link">
                                                             <div class="wh-full">
                                                               <div class="relative">
                                                                 <div class="lite-image" role="img" aria-busy="false"
@@ -7668,7 +7668,7 @@
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 6" class="h-full">
                                                         <div style="padding: 8px;"><button type="button"
-                                                            class="_1yydbd74">
+                                                            class="link">
                                                             <div class="wh-full">
                                                               <div class="relative">
                                                                 <div class="lite-image" role="img" aria-busy="false"
@@ -7711,7 +7711,7 @@
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 7" class="h-full">
                                                         <div style="padding: 8px;"><button type="button"
-                                                            class="_1yydbd74">
+                                                            class="link">
                                                             <div class="wh-full">
                                                               <div class="relative">
                                                                 <div class="lite-image" role="img" aria-busy="false"
@@ -7754,7 +7754,7 @@
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 8" class="h-full">
                                                         <div style="padding: 8px;"><button type="button"
-                                                            class="_1yydbd74">
+                                                            class="link">
                                                             <div class="wh-full">
                                                               <div class="relative">
                                                                 <div class="lite-image" role="img" aria-busy="false"
@@ -7797,7 +7797,7 @@
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 9" class="h-full">
                                                         <div style="padding: 8px;"><button type="button"
-                                                            class="_1yydbd74">
+                                                            class="link">
                                                             <div class="wh-full">
                                                               <div class="relative">
                                                                 <div class="lite-image" role="img" aria-busy="false"
@@ -7840,7 +7840,7 @@
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 10" class="h-full">
                                                         <div style="padding: 8px;"><button type="button"
-                                                            class="_1yydbd74">
+                                                            class="link">
                                                             <div class="wh-full">
                                                               <div class="relative">
                                                                 <div class="lite-image" role="img" aria-busy="false"
@@ -7883,7 +7883,7 @@
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 11" class="h-full">
                                                         <div style="padding: 8px;"><button type="button"
-                                                            class="_1yydbd74">
+                                                            class="link">
                                                             <div class="wh-full">
                                                               <div class="relative">
                                                                 <div class="lite-image" role="img" aria-busy="false"
@@ -7926,7 +7926,7 @@
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 12" class="h-full">
                                                         <div style="padding: 8px;"><button type="button"
-                                                            class="_1yydbd74">
+                                                            class="link">
                                                             <div class="wh-full">
                                                               <div class="relative">
                                                                 <div class="lite-image" role="img" aria-busy="false"
@@ -7969,7 +7969,7 @@
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 13" class="h-full">
                                                         <div style="padding: 8px;"><button type="button"
-                                                            class="_1yydbd74">
+                                                            class="link">
                                                             <div class="wh-full">
                                                               <div class="relative">
                                                                 <div class="lite-image" role="img" aria-busy="false"
@@ -14237,7 +14237,7 @@
                                               <div class="_384m8u">
                                                 <div class="_10u42wu"><span aria-busy="true"
                                                     style="display: inline-block; height: 100%; width: 100%;"><span
-                                                      class="atm_12_q7pw6w atm_16_12c5xpv atm_u_1yy80mb atm_y_9cwzv5 atm_1c_2rgkoi atm_k4_7tcf61 atm_1k_1ytfnp0 atm_2d_1r31cwp atm_9s_1ulexfb atm_mk_h2mmj6 atm_e2p1ow_glywfm dir dir-ltr"
+                                                      class="atm_12_q7pw6w atm_16_12c5xpv atm_u_1yy80mb atm_y_9cwzv5 atm_1c_2rgkoi atm_k4_7tcf61 atm_1k_1ytfnp0 atm_2d_1r31cwp atm_9s_1ulexfb relative atm_e2p1ow_glywfm dir dir-ltr"
                                                       style="height: 100%; width: 100%;"></span></span></div>
 
                                                 <div>
@@ -14290,9 +14290,9 @@
                                                         <ul aria-label="Search suggestions"
                                                           id="Koan-map-poi-search-koan__listbox" class="_11zw87j"></ul>
                                                         <span id="Koan-map-poi-search-koan__description"
-                                                          class="_krjbj">Enter a search term and navigate forward to
+                                                          class="new-arrow-underscore">Enter a search term and navigate forward to
                                                           access suggestions.</span><span aria-atomic="true"
-                                                          aria-live="polite" role="status" class="_krjbj"></span>
+                                                          aria-live="polite" role="status" class="new-arrow-underscore"></span>
                                                       </div>
                                                     </div>
                                                   </div>
@@ -24267,7 +24267,7 @@
   <div dir="ltr">
     <div class="_1t0jy5tw hidden msg-backdrop"></div>
     <section>
-      <div class="_vxvq8x hidden modal-container-msg" style="align-items: center !important;"
+      <div class="modal__container hidden modal-container-msg" style="align-items: center !important;"
         data-testid="modal-container">
         <div class="contents">
           <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
