--- a/listings-product/specific_trip.html
+++ b/listings-product/specific_trip.html
@@ -657,7 +657,7 @@
                                                               >
                                                                 <button aria-label="Previous" type="button" class="_1ue05kx">
                                                                   <span class="relative"
-                                                                    ><span class="_krjbj">_</span
+                                                                    ><span class="new-arrow-underscore">_</span
                                                                     ><svg
                                                                       viewBox="0 0 32 32"
                                                                       xmlns="http://www.w3.org/2000/svg"
