--- a/loaders/messages-loader.html
+++ b/loaders/messages-loader.html
@@ -1703,7 +1703,7 @@
                                         <div class="_1i2j1wi">Airbnb Support</div>
                                       </div>
                                       <div id="support-message" aria-disabled="false" role="group"
-                                        aria-labelledby="support-message-row-title" class="rcem0st dir dir-ltr">
+                                        aria-labelledby="support-message-row-title" class="explore-filter-menu__list-padding dir dir-ltr">
                                         <div class="_gfomxi">
                                           <div id="support-message-row-title" class="_gw4xx4"></div>
                                           <div class="_hi9sy">Help from Airbnb's Community Support Team.</div>
@@ -1898,7 +1898,7 @@
   <div id="translation-modal" class="hidden" dir="ltr">
     <div class="_1t0jy5tw"></div>
     <section>
-      <div class="_vxvq8x" data-testid="modal-container">
+      <div class="modal__container" data-testid="modal-container">
         <div class="contents">
           <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
           <div class="contents">
@@ -1910,7 +1910,7 @@
                       <path d="m6 6 20 20"></path>
                       <path d="m26 6-20 20"></path>
                     </svg></span></button></div>
-              <header class="_1youxq0">
+              <header class="modal__header-container">
                 <div class="_1tng6ym"></div>
                 <div class="_9t7ktw">
                   <h1 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
