--- a/loaders/products-loader.html
+++ b/loaders/products-loader.html
@@ -245,7 +245,7 @@
                                                     <g fill="none"><path d="m20 28-11.29289322-11.2928932c-.39052429-.3905243-.39052429-1.0236893 0-1.4142136l11.29289322-11.2928932"></path></g>
                                                    </svg>
                                                   </div>
-                                                  <div class="_1s0b0yb"></div>
+                                                  <div class="page-shell-mobile__nav-overlay"></div>
                                                  </div>
                                                 </span>
                                                </a>
