--- a/messaging/inbox.html
+++ b/messaging/inbox.html
@@ -2285,7 +2285,7 @@
     <div dir="ltr" id="show-filter-modal" class="hidden">
       <div class="_1t0jy5tw"></div>
       <section>
-        <div class="_vxvq8x" data-testid="modal-container">
+        <div class="modal__container" data-testid="modal-container">
           <div class="contents">
             <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
             <div class="contents">
@@ -2325,7 +2325,7 @@
                           <div class="_le6wlg">
                             <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
                               <div id="filter-experiences-button" data-plugin-in-point-id="INBOX_FILTERS_LISTING" data-section-id="INBOX_FILTERS_LISTING" style="padding-top: 32px; padding-bottom: 32px;">
-                                <button type="button" class="_1yydbd74">
+                                <button type="button" class="link">
                                   <div class="_zjunba">
                                     <div>
                                       <h3 class="_d8a74u">Experiences</h3>
@@ -2420,7 +2420,7 @@
     <div dir="ltr" id="show-filter-experience-modal" class="hidden">
       <div class="_1t0jy5tw"></div>
       <section>
-        <div class="_vxvq8x" data-testid="modal-container">
+        <div class="modal__container" data-testid="modal-container">
           <div class="contents">
             <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
             <div class="contents">
