--- a/online-experience/insights.html
+++ b/online-experience/insights.html
@@ -3759,7 +3759,7 @@
             </div>
             <div class="_rrmdgl"></div>
            </header>
-           <div class="_12kfhdn">
+           <div class="modal__body">
             <fieldset class="_25bp3z" role="radiogroup">
              <legend class="_1wjt7fx"></legend>
              <div class="_l8ik20">
@@ -3790,7 +3790,7 @@
      <div dir="ltr">
       <div class="_1t0jy5tw hidden overall-backdrop"></div>
       <section>
-       <div class="_vxvq8x hidden modal-container-overall" style="align-items: center !important;" data-testid="modal-container">
+       <div class="modal__container hidden modal-container-overall" style="align-items: center !important;" data-testid="modal-container">
         <div class="contents">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
          <div class="contents">
@@ -3821,14 +3821,14 @@
                    </span>
                   </button>
                  </div>
-                 <header class="_1youxq0">
+                 <header class="modal__header-container">
                   <div class="_1tng6ym"></div>
                   <div class="_9t7ktw">
                    <h1 tabindex="-1" class="heading" elementtiming="LCP-target"><div class="_1q9sh65">Price or value</div></h1>
                   </div>
                   <div class="_rrmdgl"></div>
                  </header>
-                 <div class="_12kfhdn">
+                 <div class="modal__body">
                   <div class="_xiq13o">
                    <span class="ll4r2nl dir dir-ltr">
                     There’s an art to setting the right price for your experience. A fair price takes into consideration your time and costs, as well as the guest’s expectations of what they should get for what they paid.<br />
@@ -3859,7 +3859,7 @@
      <div dir="ltr">
       <div class="_1t0jy5tw hidden lower-backdrop"></div>
       <section>
-       <div class="_vxvq8x hidden modal-container-lower" style="align-items: center !important;" data-testid="modal-container">
+       <div class="modal__container hidden modal-container-lower" style="align-items: center !important;" data-testid="modal-container">
         <div class="contents">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
          <div class="contents">
@@ -3890,14 +3890,14 @@
                    </span>
                   </button>
                  </div>
-                 <header class="_1youxq0">
+                 <header class="modal__header-container">
                   <div class="_1tng6ym"></div>
                   <div class="_9t7ktw">
                    <h1 tabindex="-1" class="heading" elementtiming="LCP-target"><div class="_1q9sh65">Price was lower elsewhere</div></h1>
                   </div>
                   <div class="_rrmdgl"></div>
                  </header>
-                 <div class="_12kfhdn">
+                 <div class="modal__body">
                   <div class="_xiq13o">
                    <span class="ll4r2nl dir dir-ltr">
                     No one likes feeling like they got a bad deal, and everyone comparison shops. Build a good relationship with guests by being fair about your pricing.<br />
