--- a/payments/payment.html
+++ b/payments/payment.html
@@ -238,7 +238,7 @@
                       </nav>
                       <div tabindex="-1" class="_1i7ccu91">
                         <div class="confirm-pay">
-                          <div class="_cne99n">
+                          <div class="confirm-pay__container">
                             <div data-testid="payments-application">
                               <div style="min-height: 100vh">
                                 <div class="block">
@@ -279,7 +279,7 @@
                                                 </g>
                                               </svg>
                                             </div>
-                                            <div class="_1s0b0yb"></div>
+                                            <div class="page-shell-mobile__nav-overlay"></div>
                                           </div>
                                         </a>
                                         <div class="_1nc9y17">
@@ -714,7 +714,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="block">
-                                                    <div class="_cne99n"></div>
+                                                    <div class="confirm-pay__container"></div>
                                                   </div>
                                                 </div>
                                               </div>
@@ -770,11 +770,11 @@
                                                   <div>
                                                     <div class="block">
                                                       <div
-                                                        class="_cne99n"
+                                                        class="confirm-pay__container"
                                                       ></div>
                                                     </div>
                                                   </div>
-                                                  <div class="_cne99n"></div>
+                                                  <div class="confirm-pay__container"></div>
                                                 </div>
                                               </div>
                                             </div>
@@ -842,7 +842,7 @@
                                               style="padding-bottom: 24px"
                                             >
                                               <fieldset class="_1rshn0">
-                                                <legend class="_1gyjybc">
+                                                <legend class="pa-0">
                                                   <span
                                                     class="visually-hidden dir dir-ltr"
                                                   >
@@ -1308,7 +1308,7 @@
                                                   <div class="_fz3zdn"><button data-modal="#message-the-host-modal" data-testid="checkout_platform.FIRST_MESSAGE.add" type="button"
                                                       class="_1ju7xj0j">Add</button></div>
                                                 </div>
-                                                <div class="_cne99n"></div>
+                                                <div class="confirm-pay__container"></div>
                                               </div>
                                             </div>
                                           </div>
@@ -1331,7 +1331,7 @@
                                                 <div class="_fz3zdn"><button data-modal="#phone-number-modal" data-testid="checkout_platform.PHONE_VERIFICATION.add" type="button"
                                                     class="_1ju7xj0j">Add</button></div>
                                               </div>
-                                              <div class="_cne99n"></div>
+                                              <div class="confirm-pay__container"></div>
                                             </div>
                                           </div>
                                         </div>
@@ -1351,7 +1351,7 @@
                                                 </div>
                                                 <div class="_fz3zdn"><button data-modal="#profile-photo-modal" type="button" class="_1ju7xj0j">Add</button></div>
                                               </div>
-                                              <div class="_cne99n"></div>
+                                              <div class="confirm-pay__container"></div>
                                             </div>
                                           </div>
                                         </div>
@@ -1410,10 +1410,10 @@
                                                 </span>
                                                 if I’m responsible for damage.
                                               </div>
-                                              <div class="_cne99n"></div>
-                                              <div class="_cne99n"></div>
-                                              <div class="_cne99n"></div>
-                                              <div class="_cne99n"></div>
+                                              <div class="confirm-pay__container"></div>
+                                              <div class="confirm-pay__container"></div>
+                                              <div class="confirm-pay__container"></div>
+                                              <div class="confirm-pay__container"></div>
                                             </div>
                                           </div>
                                         </div>
@@ -4157,7 +4157,7 @@
                                                                 "
                                                               >
                                                                 <ul
-                                                                  class="_1gyjybc"
+                                                                  class="pa-0"
                                                                   role="group"
                                                                   aria-label="Existing payment methods"
                                                                   style="
@@ -4273,7 +4273,7 @@
                                                                   </li>
                                                                 </ul>
                                                                 <ul
-                                                                  class="_1gyjybc"
+                                                                  class="pa-0"
                                                                   role="group"
                                                                   aria-labelledby="dropdown-selector-payment_option_selector-group-label-1"
                                                                 >
@@ -4746,7 +4746,7 @@
                                                   <div class="_fz3zdn"><button data-modal="#message-the-host-modal" data-testid="checkout_platform.FIRST_MESSAGE.add" type="button"
                                                       class="_1ju7xj0j">Add</button></div>
                                                 </div>
-                                                <div class="_cne99n"></div>
+                                                <div class="confirm-pay__container"></div>
                                               </div>
                                             </div>
                                           </div>
@@ -4763,7 +4763,7 @@
                                                 </div>
                                                 <div class="_fz3zdn"><button data-modal="#profile-photo-modal" type="button" class="_1ju7xj0j">Add</button></div>
                                               </div>
-                                              <div class="_cne99n"></div>
+                                              <div class="confirm-pay__container"></div>
                                             </div>
                                           </div>
                                         </div>
@@ -4781,7 +4781,7 @@
                                                 <div class="_fz3zdn"><button data-modal="#phone-number-modal" data-testid="checkout_platform.PHONE_VERIFICATION.add" type="button"
                                                     class="_1ju7xj0j">Add</button></div>
                                               </div>
-                                              <div class="_cne99n"></div>
+                                              <div class="confirm-pay__container"></div>
                                             </div>
                                           </div>
                                         </div>
@@ -6667,10 +6667,10 @@
                                                                   ></span>
                                                                 </button>
                                                               </div>
-                                                              <div class="_12kfhdn">
+                                                              <div class="modal__body">
                                                                 <div class="_11vbjbm">
                                                                   <div class="_1875dx">
-                                                                    <div class="_l6x7wk">Average nightly rate is rounded.</div>
+                                                                    <div class="modal__desc-sm">Average nightly rate is rounded.</div>
                                                                   </div>
                                                                 </div>
                                                               </div>
@@ -7819,7 +7819,7 @@
                             <div class="_js9i23">
                               <input
                                 name="quick_pay.coupon.modal.code_input"
-                                class="_c5rhl5"
+                                class="form__input"
                                 id="quick_pay.coupon.modal.code_input"
                                 autocomplete="off"
                                 type="text"
@@ -10904,7 +10904,7 @@ Thank you very much and we hope you enjoy your stay!</div>
     <div id="message-the-host-modal" class="hidden" dir="ltr">
       <div class="_1t0jy5tw"></div>
       <section>
-        <div class="_vxvq8x" data-testid="modal-container">
+        <div class="modal__container" data-testid="modal-container">
           <div class="contents">
             <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
             <div class="contents">
@@ -10917,7 +10917,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                         <path d="m6 6 20 20"></path>
                         <path d="m26 6-20 20"></path>
                       </svg></span></button></div>
-                <header class="_1youxq0">
+                <header class="modal__header-container">
                   <div class="_1tng6ym"></div>
                   <div class="_9t7ktw">
                     <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
@@ -10926,7 +10926,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                   </div>
                   <div class="_rrmdgl"></div>
                 </header>
-                <div class="_12kfhdn"><label for="null_textArea">
+                <div class="modal__body"><label for="null_textArea">
                     <div id="firstMessageLabelId" class="_1pvz9ma9">Message the Host</div>
                     <div id="firstMessageDescribeId">
                       <div class="_pijg88z">Let the Host know why you're traveling and when you'll check in.</div>
@@ -10976,7 +10976,7 @@ Thank you very much and we hope you enjoy your stay!</div>
     <div id="profile-photo-modal" class="hidden" dir="ltr">
       <div class="_1t0jy5tw"></div>
       <section>
-        <div class="_vxvq8x" data-testid="modal-container">
+        <div class="modal__container" data-testid="modal-container">
           <div class="contents">
             <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
             <div class="contents">
@@ -10989,7 +10989,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                         <path d="m6 6 20 20"></path>
                         <path d="m26 6-20 20"></path>
                       </svg></span></button></div>
-                <header class="_1youxq0">
+                <header class="modal__header-container">
                   <div class="_1tng6ym"></div>
                   <div class="_9t7ktw">
                     <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
@@ -11040,7 +11040,7 @@ Thank you very much and we hope you enjoy your stay!</div>
     <div id="phone-number-modal" class="hidden" dir="ltr">
       <div class="_1t0jy5tw"></div>
       <section>
-        <div class="_vxvq8x" data-testid="modal-container">
+        <div class="modal__container" data-testid="modal-container">
           <div class="contents">
             <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
             <div class="contents">
@@ -11052,7 +11052,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                         <path d="m6 6 20 20"></path>
                         <path d="m26 6-20 20"></path>
                       </svg></span></button></div>
-                <header class="_1youxq0">
+                <header class="modal__header-container">
                   <div class="_1tng6ym"></div>
                   <div class="_9t7ktw">
                     <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
@@ -11061,7 +11061,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                   </div>
                   <div class="_rrmdgl"></div>
                 </header>
-                <div class="_12kfhdn">
+                <div class="modal__body">
                   <div class="_1p7bda">We’ll send you trip updates and a text to verify this number.<div class="my-6">
                       <div class="cx1v2qp dir dir-ltr" style="border-radius: 8px;">
                         <div class="flex">
@@ -11101,7 +11101,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                                 <div dir="ltr">
                                   <div class="_js9i23">
                                     <div class="_1dnryfrb">+63</div><input aria-required="true" name="phone_number"
-                                      class="_c5rhl5" id="phone_number" autocomplete="tel-national" type="tel"
+                                      class="form__input" id="phone_number" autocomplete="tel-national" type="tel"
                                       aria-describedby="" value="">
                                   </div>
                                 </div>
@@ -11181,7 +11181,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                     </header>
                       
 
-<div class="_12kfhdn">
+<div class="modal__body">
   <div class="_gx69ga">
     <div class="_11jkqip">
       <div><div class="_1x5uynhu">₱56,615.29 x 2 nights</div></div>
@@ -11247,7 +11247,7 @@ Thank you very much and we hope you enjoy your stay!</div>
 <div dir="ltr" id="payment-popup" class="hidden">
       <div class="_1t0jy5tw"></div>
       <section>
-        <div class="_vxvq8x" data-testid="modal-container">
+        <div class="modal__container" data-testid="modal-container">
           <div class="contents">
             <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
             <div class="contents">
