--- a/payments/service-fee.html
+++ b/payments/service-fee.html
@@ -302,8 +302,8 @@
                                           >
                                             <div style="margin-top: 32px">
 
-<div class="_jtezirx">
-  <div class="_wrz7pg">
+<div class="payment-methods__contents-wrapper">
+  <div class="payment-methods__your-payments-header">
     <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
       Service fee settings
     </h1>
@@ -312,15 +312,15 @@
     Choose a service fee pricing option for all of your listings.
   </div>
   <div style="margin-top: 16px; margin-bottom: 16px">
-    <div id="23" aria-disabled="false" class="rcem0st dir dir-ltr">
-      <label for="23-row-radio-button" class="_13xlah4"
+    <div id="23" aria-disabled="false" class="explore-filter-menu__list-padding dir dir-ltr">
+      <label for="23-row-radio-button" class="cursor-pointer"
         ><div class="flex">
           <div class="_7ytxmo">
             <input
               aria-labelledby="23-row-title"
               aria-describedby="23-row-subtitle"
               id="23-row-radio-button"
-              class="_83s1a2"
+              class="radio__button"
               type="radio"
               value="23"
             />
@@ -340,8 +340,8 @@
         </div></label
       >
     </div>
-    <div id="0" aria-disabled="false" class="rcem0st dir dir-ltr">
-      <label for="0-row-radio-button" class="_13xlah4"
+    <div id="0" aria-disabled="false" class="explore-filter-menu__list-padding dir dir-ltr">
+      <label for="0-row-radio-button" class="cursor-pointer"
         ><div class="flex">
           <div class="_7ytxmo">
             <input
@@ -795,8 +795,8 @@
                                           class="payment-methods__contents-wrapper"
                                         >
                                           <div style="margin-top: 32px">
-                                            <div class="_jtezirx">
-                                              <div class="_wrz7pg">
+                                            <div class="payment-methods__contents-wrapper">
+                                              <div class="payment-methods__your-payments-header">
                                                 <h2
                                                   tabindex="-1"
                                                   class="heading"
@@ -818,18 +818,18 @@
                                                 <div
                                                   id="23"
                                                   aria-disabled="false"
-                                                  class="rcem0st dir dir-ltr"
+                                                  class="explore-filter-menu__list-padding dir dir-ltr"
                                                 >
                                                   <label
                                                     for="23-row-radio-button"
-                                                    class="_13xlah4"
+                                                    class="cursor-pointer"
                                                     ><div class="flex">
                                                       <div class="_7ytxmo">
                                                         <input
                                                           aria-labelledby="23-row-title"
                                                           aria-describedby="23-row-subtitle"
                                                           id="23-row-radio-button"
-                                                          class="_83s1a2"
+                                                          class="radio__button"
                                                           type="radio"
                                                           value="23"
                                                         />
@@ -872,11 +872,11 @@
                                                 <div
                                                   id="0"
                                                   aria-disabled="false"
-                                                  class="rcem0st dir dir-ltr"
+                                                  class="explore-filter-menu__list-padding dir dir-ltr"
                                                 >
                                                   <label
                                                     for="0-row-radio-button"
-                                                    class="_13xlah4"
+                                                    class="cursor-pointer"
                                                     ><div class="flex">
                                                       <div class="_7ytxmo">
                                                         <input
