--- a/resource-center/article.html
+++ b/resource-center/article.html
@@ -1262,7 +1262,7 @@
                                   <div class="_10ejfg4u">
                                       <div style="margin-left:16px">
                                           <div class="_1nz6vco">Airbnb</div>
-                                          <div class="_10rf6ea">Feb 22, 2018</div>
+                                          <div class="resolution__reservation-continer-wrapper">Feb 22, 2018</div>
                                       </div>
                                   </div>
                               </div>
