--- a/resource-center/video.html
+++ b/resource-center/video.html
@@ -1144,7 +1144,7 @@
                                   <div class="_10ejfg4u">
                                       <div style="margin-left:16px">
                                           <div class="_1nz6vco">Airbnb</div>
-                                          <div class="_10rf6ea">Oct 15, 2018</div>
+                                          <div class="resolution__reservation-continer-wrapper">Oct 15, 2018</div>
                                       </div>
                                   </div>
                               </div>
