--- a/submission/basic.html
+++ b/submission/basic.html
@@ -1233,7 +1233,7 @@
                                    <label class="_1yw7hpv" for="partner-code">
                                     <div class="_1jn0ze9"><div class="_11hx67x">Partner confirmation code</div></div>
                                     <div dir="ltr">
-                                     <div class="_js9i23"><input class="_c5rhl5" id="partner-code" autocomplete="off" type="text" aria-describedby="partner-code-InputField-help" value="" /></div>
+                                     <div class="_js9i23"><input class="form__input" id="partner-code" autocomplete="off" type="text" aria-describedby="partner-code-InputField-help" value="" /></div>
                                     </div>
                                    </label>
                                   </div>
