--- a/submission/discounts.html
+++ b/submission/discounts.html
@@ -1071,7 +1071,7 @@
                                        <div class="flex">
                                         <div class="_6jnrcn">
                                          <div class="_9hxttoo">
-                                          <label class="_krjbj" for="group_rate_min_group_size_0">Minimum group size</label>
+                                          <label class="new-arrow-underscore" for="group_rate_min_group_size_0">Minimum group size</label>
                                           <div dir="ltr">
                                            <div class="_1wcr140x">
                                             <div class="_178faes"><input autocomplete="off" class="_14fdu48d" data-veloute="group_rate_min_group_size_0" id="group_rate_min_group_size_0" maxlength="2" name="group_rate_min_group_size_0" type="tel" value="2" /></div>
@@ -1082,7 +1082,7 @@
                                         <div class="_16zn5jy">-</div>
                                         <div class="_6jnrcn">
                                          <div class="_9hxttoo">
-                                          <label class="_krjbj" for="group_rate_max_group_size_0">Maximum group size</label>
+                                          <label class="new-arrow-underscore" for="group_rate_max_group_size_0">Maximum group size</label>
                                           <div dir="ltr">
                                            <div class="_137u52jb">
                                             <div class="_178faes">
@@ -1098,7 +1098,7 @@
                                        <div class="_1wlfjr">Discount</div>
                                        <div class="_1np9qii">
                                         <div class="_9hxttoo">
-                                         <label class="_krjbj" for="group_rate_discount_percentage_0">Discount</label>
+                                         <label class="new-arrow-underscore" for="group_rate_discount_percentage_0">Discount</label>
                                          <div dir="ltr">
                                           <div class="_1wcr140x">
                                            <div class="_178faes">
@@ -1118,7 +1118,7 @@
                                        <div class="_13mi7gx">
                                         <div class="_1wlfjr">Each adult pays</div>
                                         <div class="_9hxttoo">
-                                         <label class="_krjbj" for="unused_form_element_1_0">Each guest pays</label>
+                                         <label class="new-arrow-underscore" for="unused_form_element_1_0">Each guest pays</label>
                                          <div dir="ltr">
                                           <div class="_137u52jb">
                                            <div class="_ncmdki">
@@ -1163,7 +1163,7 @@
                                          </div>
                                         </div>
                                         <div class="_9hxttoo">
-                                         <label class="_krjbj" for="unused_form_element_2_0">Your estimated earnings</label>
+                                         <label class="new-arrow-underscore" for="unused_form_element_2_0">Your estimated earnings</label>
                                          <div dir="ltr">
                                           <div class="_137u52jb">
                                            <div class="_ncmdki">
@@ -1425,7 +1425,7 @@
                   </div>
                   <div class="_tz7s061">
                     <div class="_eqmd9g">
-                     <div class="_krjbj">
+                     <div class="new-arrow-underscore">
                       <div id="support-panel-header" class="_1ha6v47"><h2 class="_1ftacon">Tips</h2></div>
                      </div>
                      <div class="_c143gl" tabindex="0">
