--- a/submission/review.html
+++ b/submission/review.html
@@ -1456,7 +1456,7 @@
     <div dir="ltr">
       <div class="_1t0jy5tw hidden laws-backdrop"></div>
       <section>
-       <div class="_vxvq8x hidden modal-container-laws" data-testid="modal-container" style="align-items: center !important;">
+       <div class="modal__container hidden modal-container-laws" data-testid="modal-container" style="align-items: center !important;">
         <div class="contents">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
          <div class="contents">
@@ -1479,7 +1479,7 @@
             </button>
            </div>
            <div class="_1tv8hmo"></div>
-           <div class="_12kfhdn">
+           <div class="modal__body">
             <div class="_1ph2xfp">
              <div class="_w99wiq">
               <section>
@@ -1512,7 +1512,7 @@
     <div dir="ltr">
       <div class="_1t0jy5tw hidden tour-backdrop"></div>
       <section>
-       <div class="_vxvq8x hidden modal-container-tour" data-testid="modal-container" style="align-items: center !important;">
+       <div class="modal__container hidden modal-container-tour" data-testid="modal-container" style="align-items: center !important;">
         <div class="contents">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
          <div class="contents">
@@ -1535,7 +1535,7 @@
             </button>
            </div>
            <div class="_1tv8hmo"></div>
-           <div class="_12kfhdn">
+           <div class="modal__body">
             <div class="_1ph2xfp">
              <div class="_w99wiq">
               <section>
@@ -1571,7 +1571,7 @@
     <div dir="ltr">
       <div class="_1t0jy5tw hidden animals-backdrop"></div>
       <section>
-       <div class="_vxvq8x hidden modal-container-animals" data-testid="modal-container" style="align-items: center !important;">
+       <div class="modal__container hidden modal-container-animals" data-testid="modal-container" style="align-items: center !important;">
         <div class="contents">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
          <div class="contents">
@@ -1594,7 +1594,7 @@
             </button>
            </div>
            <div class="_1tv8hmo"></div>
-           <div class="_12kfhdn">
+           <div class="modal__body">
             <div class="_1ph2xfp">
              <div class="_w99wiq">
               <section>
