--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -847,7 +847,7 @@
     <div dir="ltr">
       <div class="_1t0jy5tw hidden "></div>
       <section>
-       <div class="_vxvq8x hidden" data-testid="modal-container">
+       <div class="modal__container hidden" data-testid="modal-container">
         <div class="contents ">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
          <div class="contents">
@@ -869,7 +869,7 @@
              </span>
             </button>
            </div>
-           <header class="_1youxq0">
+           <header class="modal__header-container">
             <div class="_1tng6ym"></div>
             <div class="_9t7ktw">
              <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
@@ -1222,7 +1222,7 @@
             </div>
             <div class="_rrmdgl"></div>
            </header>
-           <div class="_12kfhdn"><div class="_3joskp">Your progress up until now has been saved.</div></div>
+           <div class="modal__body"><div class="_3joskp">Your progress up until now has been saved.</div></div>
            <footer class="_zgc1p6">
             <div class="_1gty68l">
              <button type="button" class="btn-link-condensed">Exit</button>
@@ -1266,7 +1266,7 @@
              </span>
             </button>
            </div>
-           <div class="_12kfhdn">
+           <div class="modal__body">
             <div class="_6tsdpm"><span class="ll4r2nl dir dir-ltr">Suggested prices are based on your listing’s location and amenities, as well as nearby prices and demand. You choose your price, and you can adjust it at any time.</span></div>
            </div>
            <footer class="_zgc1p6">
