--- a/become-a-host/title.html
+++ b/become-a-host/title.html
@@ -704,7 +704,7 @@ Cheerful private villa with pool</textarea
     <div dir="ltr">
       <div class="_1t0jy5tw hidden "></div>
       <section>
-       <div class="_vxvq8x hidden" data-testid="modal-container">
+       <div class="modal__container hidden" data-testid="modal-container">
         <div class="contents ">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
          <div class="contents">
@@ -726,7 +726,7 @@ Cheerful private villa with pool</textarea
              </span>
             </button>
            </div>
-           <header class="_1youxq0">
+           <header class="modal__header-container">
             <div class="_1tng6ym"></div>
             <div class="_9t7ktw">
              <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
@@ -1079,7 +1079,7 @@ Cheerful private villa with pool</textarea
             </div>
             <div class="_rrmdgl"></div>
            </header>
-           <div class="_12kfhdn"><div class="_3joskp">Your progress up until now has been saved.</div></div>
+           <div class="modal__body"><div class="_3joskp">Your progress up until now has been saved.</div></div>
            <footer class="_zgc1p6">
             <div class="_1gty68l">
              <button type="button" class="btn-link-condensed">Exit</button>
