--- a/help/search-tips.html
+++ b/help/search-tips.html
@@ -91,7 +91,7 @@
                               class="sjnrf6s s6on1c3 dir dir-ltr"
                               data-testid="search-submit-button"
                             >
-                              <span class="_jxxpcd"
+                              <span class="become-a-host__lets-go-wrapper"
                                 ><span
                                   class="_kaq6tx"
                                   style="
