--- a/online-experience/dashboard.html
+++ b/online-experience/dashboard.html
@@ -1376,7 +1376,7 @@
     <div dir="ltr">
       <div class="_1t0jy5tw hidden"></div>
       <section>
-       <div class="_vxvq8x hidden" style="align-items: center !important;" data-testid="modal-container">
+       <div class="modal__container hidden" style="align-items: center !important;" data-testid="modal-container">
         <div class="contents">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
          <div class="contents">
@@ -1398,22 +1398,22 @@
              </span>
             </button>
            </div>
-           <header class="_1youxq0">
+           <header class="modal__header-container">
             <div class="_1tng6ym"></div>
             <div class="_9t7ktw">
              <h1 tabindex="-1" class="heading" elementtiming="LCP-target"><div class="_1q9sh65">Tasks</div></h1>
             </div>
             <div class="_rrmdgl"></div>
            </header>
-           <div class="_12kfhdn">
+           <div class="modal__body">
             <div class="_1pzwj39">
              <div id="tabs" aria-label="tabs">
               <div class="relative">
                <div class="_1xkr92p" data-testid="tab-list-wrapper">
                 <div class="_qc3ank" role="tablist">
-                 <button type="button" id="tab--tabs--0" aria-controls="panel--tabs--0" aria-selected="true" class="_fd0fliz" role="tab">Incomplete</button>
-                 <button type="button" id="tab--tabs--1" aria-controls="panel--tabs--1" aria-selected="false" class="_tns11i" role="tab" tabindex="-1">Complete</button>
-                 <button type="button" id="tab--tabs--2" aria-controls="panel--tabs--2" aria-selected="false" class="_tns11i" role="tab" tabindex="-1">Ignored</button>
+                 <button type="button" id="tab--tabs--0" aria-controls="panel--tabs--0" aria-selected="true" class="tab__btn-active" role="tab">Incomplete</button>
+                 <button type="button" id="tab--tabs--1" aria-controls="panel--tabs--1" aria-selected="false" class="tab__btn" role="tab" tabindex="-1">Complete</button>
+                 <button type="button" id="tab--tabs--2" aria-controls="panel--tabs--2" aria-selected="false" class="tab__btn" role="tab" tabindex="-1">Ignored</button>
                 </div>
                </div>
                <div class="_1wadwfl"></div>
