--- a/payments/payment-success.html
+++ b/payments/payment-success.html
@@ -294,7 +294,7 @@
                                                   width: 12px;
                                                   fill: currentColor;
                                                 " aria-hidden="true" role="presentation" focusable="false">
-                                                <path d="M15.094 1.579l-4.124 8.885-9.86 1.27a1 1 0 0 0-.542 1.736l7.293 6.565-1.965 9.852a1 1 0 0 0 1.483 1.061L16 25.951l8.625 4.997a1 1 0 0 0 1.482-1.06l-1.965-9.853 7.293-6.565a1 1 0 0 0-.541-1.735l-9.86-1.271-4.127-8.885a1 1 0 0 0-1.814 0z" fill-rule="evenodd"></path></svg></span><span class="_2a6au1i" aria-hidden="true">5</span><span class="_a7a5sx" aria-hidden="true">&nbsp;(<!-- -->2 reviews<!-- -->)</span></span>
+                                                <path d="M15.094 1.579l-4.124 8.885-9.86 1.27a1 1 0 0 0-.542 1.736l7.293 6.565-1.965 9.852a1 1 0 0 0 1.483 1.061L16 25.951l8.625 4.997a1 1 0 0 0 1.482-1.06l-1.965-9.853 7.293-6.565a1 1 0 0 0-.541-1.735l-9.86-1.271-4.127-8.885a1 1 0 0 0-1.814 0z" fill-rule="evenodd"></path></svg></span><span class="_2a6au1i" aria-hidden="true">5</span><span class="text__color-gray" aria-hidden="true">&nbsp;(<!-- -->2 reviews<!-- -->)</span></span>
                                         </div>
                                       </div>
                                       <div class="_9dd4bh"></div>
