--- a/submission/title.html
+++ b/submission/title.html
@@ -1195,7 +1195,7 @@ Lorem Ipsum is simply dummy text of the printing</textarea
     <div dir="ltr">
       <div class="_1t0jy5tw hidden example-backdrop"></div>
       <section>
-       <div class="_vxvq8x hidden modal-container-example" data-testid="modal-container" style="align-items: center !important;">
+       <div class="modal__container hidden modal-container-example" data-testid="modal-container" style="align-items: center !important;">
         <div class="contents">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
          <div class="contents">
@@ -1231,7 +1231,7 @@ Lorem Ipsum is simply dummy text of the printing</textarea
                 </div>
                 <div class="_rrmdgl"></div>
                </header>
-               <div class="_12kfhdn">
+               <div class="modal__body">
                 <ul class="_qr4oq3">
                  <li class="_1bwncnd">
                   <div class="img-middle" role="img" aria-busy="false" aria-label="Image of a group of runners" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
